--- a/Câmara-mento - Juan Montoya/Screens/CameraWaitScreen.resx
+++ b/Câmara-mento - Juan Montoya/Screens/CameraWaitScreen.resx
@@ -3785,7 +3785,7 @@
   <data name="cam5.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADsAAAAjCAYAAAAqoHJFAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsNAAALDQHtB8AsAAAA8ElE
+        MAAA6mAAADqYAAAXcJy6UTwAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsMAAALDAE/QCLIAAAA8ElE
         QVRoQ+2RQQoCMRAEfZPg3f9/aiWHQFnMLGJClOwU9GG6m0CT23EhauyuvI29P57bidTYnUROx57xbZfQ
         Z2Z/RKTGukSfme8Ge8x8dzJvlkiNdYl+JJJlvk3UnSFSY12iH4lkmW8TdWeITB+bEXX5BjP7IyI11iX6
         zHw32GPmu8EeM/sjIulYF03Wo8/Md4M9ZvZHRGrsTiLTfzaD/ZUiNdYl+sx8N9j7B5Ea61LkNTLf9N4v
@@ -3796,7 +3796,7 @@
   <data name="cam2.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADkAAAAkCAYAAAAzUJLAAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
-        MAAA6mAAADqYAAAXcJy6UTwAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsOAAALDgFAvuFBAAAA8UlE
+        MAAA6mAAADqYAAAXcJy6UTwAAAAEZ0FNQQAAsY8L/GEFAAAACXBIWXMAAAsMAAALDAE/QCLIAAAA8UlE
         QVRoQ+2RQQoDMQwD+6ZC7/3/p7boYJgKe2mbkELWAzpYEgGR23EBeuQuvI28P57bSfTIHSROR57xa5fQ
         Z+b+iMS1RxL6zPwW7DHzO6i8WRI9MqCfiVSZ307WnSHRIwP6mUiV+e1k3RkS00dWZF2+wcz9EYkeGdBn
         5rdgj5nfgj1m7o9IlCOjUFH16DPzW7DHzP0RiR65g8SUn/y2u1Li2iMJfWZ+C/aYub9KokcGmSfYrxRk
@@ -3851,4 +3851,7 @@
         Ndz8FPB9zc/s9eB5JJPC2ntJJJ4TsyzMbaMkkmPk0UV+XcMfxKnov1P7B8dv9xwP+Kf5RP/Z
 </value>
   </data>
+  <metadata name="gameTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>163, 17</value>
+  </metadata>
 </root>
